--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.475.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.4.2",
     "next": "^15.1.7",
